...
import '../models/execution_state.dart';
import '../models/python_program.dart';
import '../models/python_project.dart';
import '../repositories/program_repository.dart';
import '../repositories/project_repository.dart';

const defaultStarterCode = 'print("Hello, World!")\n';

final programRepositoryProvider = Provider((ref) => ProgramRepository());
final programFileServiceProvider = Provider((ref) => ProgramFileService());
final projectRepositoryProvider = Provider((ref) => ProjectRepository());

final projectsProvider = FutureProvider.family<List<PythonProject>, String>((
...
